--- a/style.css
+++ b/style.css
@@ -53,8 +53,59 @@
     stroke: #ffffff;
 }
 
-/* @media screen and (max-width: 990px) {
-    #svg-group{
+#svg-group img{
+    width: 45vw;
+}
 
-    }
-} */
+.col-sm-6{
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    margin-top: 5rem;
+}
+
+#self-intro{
+    font-family: serif;
+    font-weight: 500;
+    color: rgb(38, 38, 38);
+    font-size: 1.2vw;
+}
+
+#hero-text{
+    /* display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center; */
+}
+
+.tag-text{
+    font-family: "Lobster", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: larger;
+}
+
+.bold-text{
+    font-family: "Lexend Deca", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+  }
+
+  div h1{
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 2.6vw;
+  }
+
+  #self-intro{
+    /* position: absolute;
+    top: 31rem; */
+  }
+
+  .row-aling-center{
+    align-items: center;
+  }
