--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
-#navbarSupportedContent{
+#navbarSupportedContent {
     justify-content: space-between;
 }
 
-.nav-link{
+.nav-link {
     color: #181717;
     font-weight: 600;
 }
 
 .resume-btn {
     height: 50px;
-    width:140px;
+    width: 140px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -53,11 +53,11 @@
     stroke: #ffffff;
 }
 
-#svg-group img{
+#svg-group img {
     width: 45vw;
 }
 
-.col-sm-6{
+.col-sm-6 {
     text-align: left;
     display: flex;
     flex-direction: column;
@@ -65,47 +65,92 @@
     margin-top: 5rem;
 }
 
-#self-intro{
+#self-intro {
     font-family: serif;
     font-weight: 500;
     color: rgb(38, 38, 38);
     font-size: 1.2vw;
 }
 
-#hero-text{
-    /* display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center; */
-}
-
-.tag-text{
+.tag-text {
     font-family: "Lobster", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: larger;
 }
 
-.bold-text{
+.bold-text {
     font-family: "Lexend Deca", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
-  }
+}
 
-  div h1{
+div h1 {
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
-    font-size: 2.6vw;
-  }
+    font-size: 3vw;
+}
 
-  #self-intro{
-    /* position: absolute;
-    top: 31rem; */
-  }
+#self-intro {
+    font-family: serif;
+    font-weight: 500;
+    color: rgb(38, 38, 38);
+    font-size: 1vw;
+}
 
-  .row-aling-center{
+.row-aling-center {
     align-items: center;
-  }
+}
+
+.social-btn {
+    height: 45px;
+    width: 45px;
+}
+
+#social-link {
+    display: flex;
+    column-gap: 32px;
+}
+
+#hero-section{
+    margin-top: 2rem;
+}
+
+@media screen and (max-width: 575px) {
+    #svg-group img {
+        width: 75vw;
+    }
+
+    .col-sm-6 {
+        text-align: center;
+        row-gap: 1rem;
+        margin-top: 2.5rem;
+    }
+
+    div h1 {
+        font-weight: 900;
+        font-size: 4vw;
+    }
+
+    #self-intro {
+        font-size: 3vw;
+        margin-bottom: 0;
+    }
+
+    #social-link {
+        text-align: center;
+        justify-content: center;
+        margin-top: 0;
+    }
+
+    .social-btn {
+        height: 35px;
+        width: 35px;
+    }
+    #hero-section div{
+        margin-top: 1rem;
+    }
+}
