--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ div h1 {
 
 #education-section{
     width: 100%;
-    height: 42rem;
+    height: 61rem;
     background-color: white;
     margin: 0;
     padding: 0;
@@ -458,6 +458,74 @@ div h1 {
     border-left: 18px solid #000000;
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
+}
+
+#project-section h1{
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    color: #ffffff;
+    margin-bottom: 4rem;
+    padding-top: 4rem;
+}
+
+#project-section{
+    width: 100%;
+    height: 42rem;
+    background-color: #000000;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    left: 0;
+}
+
+
+.project-div{
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+}
+
+.project-info{
+    width: 90%;
+}
+
+.project-img img{
+    width: 25vw;
+}
+
+.project-img svg path{
+    fill: #ffffff;
+}
+
+.project-decp{
+    text-align: left;
+    font-size:  1.2vw;
+}
+
+.project-heading{
+    text-align: left;
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
+    color: #ffffff;
+    font-size: 2rem;
+}
+
+.project-no{
+    text-align: left;
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
+    color: #ffffff;
+    font-size: 2.5rem;
+}
+
+#read-more-svg{
+    align-items: flex-start;
 }
 
 @media screen and (max-width: 575px) {
