--- a/style.css
+++ b/style.css
@@ -489,6 +489,8 @@ div h1 {
 
 .project-info{
     width: 90%;
+    display: flex;
+    flex-direction: column;
 }
 
 .project-img img{
@@ -511,7 +513,7 @@ div h1 {
     font-weight: 900;
     font-style: normal;
     color: #ffffff;
-    font-size: 2rem;
+    font-size: 2vw;
 }
 
 .project-no{
@@ -521,11 +523,15 @@ div h1 {
     font-weight: 900;
     font-style: normal;
     color: #ffffff;
-    font-size: 2.5rem;
+    font-size: 2.5vw;
 }
 
 #read-more-svg{
     align-items: flex-start;
+    width: 2vw;
+    height: 2vw;
+    cursor: pointer;
+    text-align: left;
 }
 
 @media screen and (max-width: 575px) {
@@ -592,6 +598,10 @@ div h1 {
     #experience-section{
         height: 33rem;
     }
+
+    /* .project-heading{
+        font-size: ;
+    } */
 }
 
 @media screen and (max-width: 1150px) {
