--- a/style.css
+++ b/style.css
@@ -472,12 +472,12 @@ div h1 {
 
 #project-section{
     width: 100%;
-    height: 42rem;
     background-color: #000000;
     margin: 0;
     padding: 0;
     top: 0;
     left: 0;
+    padding-bottom: 1rem;
 }
 
 
@@ -533,6 +533,30 @@ div h1 {
     cursor: pointer;
     text-align: left;
 }
+
+.modal-content{
+    background-color: rgba(26, 26, 26, 0.6);
+    color: white;
+    font-weight: bold
+}
+#exampleModalLabel{
+    opacity: 1;
+    font-size: x-large;
+    font-weight: bolder;
+    text-align: center;
+}
+.modal-body{
+    opacity: 1;
+}
+#table-div{
+    margin-top: 0;
+}
+
+table {
+    width: 36vw;
+    /* background-color: rgba(26, 26, 26, 0.6) !important; */
+}
+
 
 @media screen and (max-width: 575px) {
     #svg-group img {
