project section completed

--- a/style.css
+++ b/style.css
@@ -478,6 +478,9 @@ div h1 {
     top: 0;
     left: 0;
     padding-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -485,6 +488,7 @@ div h1 {
     color: #ffffff;
     display: flex;
     justify-content: center;
+    width: 80vw;
 }
 
 .project-info{
@@ -553,8 +557,13 @@ div h1 {
 }
 
 table {
-    width: 36vw;
+    width: 30vw !important;
     /* background-color: rgba(26, 26, 26, 0.6) !important; */
+}
+
+.bg-transparent{
+    background: transparent;
+    color: #ffffff !important;
 }
 
 
@@ -709,5 +718,10 @@ table {
     }
     .timeline.animated .timeline-row.active:nth-child(odd) .timeline-content {
         left: 0;
+    }
+
+    table {
+        width: 32vw !important;
+        /* background-color: rgba(26, 26, 26, 0.6) !important; */
     }
 }
